estoy agregando footer y color al title

--- a/login.html
+++ b/login.html
@@ -8,25 +8,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- CSS -->
         <link rel="stylesheet" href="css/login.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="main__header">
-            <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
+            <a href="home.html"><h1 class="header__title col-xl-auto">Sprintify</h1></a>
         </div>
     </header>
     <div>
+        <br><br>
         <h1 class="form__login-top">Para continuar, inicia sesión</h1>
         <form class="form__login" action="">
             <input class="form__login-username" type="text" placeholder="Correo electrónico o nombre de usuario">
             <br>
             <br>
-            <a href="home.html"><input class="form__login-pasword" type="password" placeholder="Contraseña"></a>
+            <input class="form__login-pasword" type="password" placeholder="Contraseña">
         </form>
         <br>
         <form action="">
             <input class="form__login-button-remember-me" type="radio" type="radio" value="Recuérdame">Recuerdame
-            <input class="form__login-button-login" type="button" value="Iniciar sesión">
+            <a href="home.html"><input class="form__login-button-login" type="button" value="Iniciar sesión"></a>
         </form>
         <h1 class="form__login-bootom">¿Has olvidado la contraseña?</h1>
         <br>
