--- a/new-playlist.html
+++ b/new-playlist.html
@@ -21,7 +21,7 @@
 
         <title>New Playlist</title>
     </head>
-    <body class="body__new-playlist">
+    <body class="body">
         <div>
             <header>
                 <div class="main__header">
