--- a/register.html
+++ b/register.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="css/register.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="main__header">
-            <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
+            <a href="home.html"><h1 class="header__title col-xl-auto">Sprintify</h1></a>
         </div>
     </header>
     <div>
@@ -47,10 +50,10 @@
     </div>
     <div class="main__footer">
         <footer>
-            <div>
-                <div class="footer__border"></div>
+            <div class="main__footer">
                 <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
                 <h1 class="footer__powered-by">Powered by</h1>
+                <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
             </div>
         </footer>
     </div>
