--- a/search-playlist.html
+++ b/search-playlist.html
@@ -11,14 +11,13 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="img/">
 </head>
 <body>
     <div>
         <header>
             <div class="main__header">
-                <a href="home.html"><h1 class="header__title" class="col-xl-auto">Sprintify</h1></a>
-                <h1 class="header__user" class="col-xl-auto">Usuario</h1>
+                <a href="home.html"><h1 class="header__title col-xl-auto">Sprintify</h1></a>
+                <h1 class="header__user col-xl-auto">Usuario</h1>
             </div>
         </header>
     </div>
@@ -81,10 +80,10 @@
     </div>
     <div class="main__footer">
         <footer>
-            <div>
-                <div class="footer__border"></div>
+            <div class="main__footer">
                 <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
                 <h1 class="footer__powered-by">Powered by</h1>
+                <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
             </div>
         </footer>
     </div>
