--- a/edit-playlist.html
+++ b/edit-playlist.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
-    <body class="body__playlist">
+    <body class="body">
         <div>
             <header>
                 <div class="main__header">
