--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
-    <body class="body__home">
+    <body class="body">
         <div>
             <header>
                 <div class="main__header">
@@ -33,6 +33,7 @@
                 <form action="">
                     <div class="home__input">
                         <a href="search-playlist.html"><input class="input__search" type="text" placeholder="Buscar una playlist"></a>
+                        <br><br>
                         <a href="new-playlist.html"><input class="input__button" type="button" value="NUEVA PLAYLIST"></a>
                     </div>
                 </form>
@@ -48,10 +49,10 @@
 
         <div class="main__footer">
             <footer>
-                <div class="footer__border"></div>
-                <div>
+                <div class="main__footer">
                     <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
                     <h1 class="footer__powered-by">Powered by</h1>
+                    <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
                 </div>
             </footer>
         </div>
