arregle las img del search y edite css

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -29,31 +29,31 @@
         <h1>Playists</h1>
         <div class="container">
             <div class="row">
-                <a href="edit-playlist.html"><div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton"></a>
+                <a href="edit-playlist.html"><div class="search__music-img"><img src="img/img1.png" alt="Reggaeton"></a>
                     <h3>Full Regaeton</h3>
                     <p>15 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img2.jpg" alt="Reggaeton 2020">
+                <div class="search__music-img"><img src="img/img2.png" alt="Reggaeton 2020">
                     <h3>Reggaeton 2020</h3>
                     <p>21 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img3.jpg" alt="Remixes">
+                <div class="search__music-img"><img src="img/img3.png" alt="Remixes">
                     <h3>Remixes</h3>
                     <p>32 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img4.jpg" alt="Vieja Escuela">
+                <div class="search__music-img"><img src="img/img4.png" alt="Vieja Escuela">
                     <h3>Vieja Escuela</h3>
                     <p>12 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img5.jpg" alt="Reggaeton Clasico">
+                <div class="search__music-img"><img src="img/img5.png" alt="Reggaeton Clasico">
                     <h3>Raggeton Clasico</h3>
                     <p>10 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img6.jpg" alt="Enganchados">
+                <div class="search__music-img"><img src="img/img6.png" alt="Enganchados">
                     <h3>Enganchados</h3>
                     <p>22 Canciones</p>
                 </div>
-                <div class="search__music-img"><img src="img/img7.jpg" alt="Urbana">
+                <div class="search__music-img"><img src="img/img7.png" alt="Urbana">
                     <h3>Urbana</h3>
                     <p>30 Canciones</p>
                 </div>
@@ -61,19 +61,19 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="search__music-img"><img src="img/img1.jpg" alt="Reggaeton">
+                <div class="search__music-img"><img src="img/img1.png" alt="Reggaeton">
                 </div>
-                <div class="search__music-img"><img src="img/img2.jpg" alt="Reggaeton 2020">
+                <div class="search__music-img"><img src="img/img2.png" alt="Reggaeton 2020">
                 </div>
-                <div class="search__music-img"><img src="img/img3.jpg" alt="Remixes">
+                <div class="search__music-img"><img src="img/img3.png" alt="Remixes">
                 </div>
-                <div class="search__music-img"><img src="img/img4.jpg" alt="Vieja Escuela">
+                <div class="search__music-img"><img src="img/img4.png" alt="Vieja Escuela">
                 </div>
-                <div class="search__music-img"><img src="img/img5.jpg" alt="Reggaeton Clasico">
+                <div class="search__music-img"><img src="img/img5.png" alt="Reggaeton Clasico">
                 </div>
-                <div class="search__music-img"><img src="img/img6.jpg" alt="Enganchados">
+                <div class="search__music-img"><img src="img/img6.png" alt="Enganchados">
                 </div>
-                <div class="search__music-img"><img src="img/img7.jpg" alt="Urbana">
+                <div class="search__music-img"><img src="img/img7.png" alt="Urbana">
                 </div>
             </div>
         </div>
