agregue fonts al html

--- a/search-playlist.html
+++ b/search-playlist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/search-playlist.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
@@ -59,6 +59,7 @@
                 </div>
             </div>
         </div>
+        <br><br>
         <div class="container">
             <div class="row">
                 <div class="search__music-img"><img src="img/img1.png" alt="Reggaeton">
