--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <title>Home</title>
 
         <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
     </head>
     <body class="body">
         <div>
