--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/login.css">
 
         <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
