añadiendo el mobile a login

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                 </div>
             </header>
         </div>
-        <div class="home__background-image">
+        <div>
             <div>
                 <h1 class="main__home-title">PONGAMOS MÚSICA, JUNTOS</h1>
             </div>
