--- a/search-playlist.html
+++ b/search-playlist.html
@@ -22,14 +22,15 @@
         </header>
     </div>
     <div>
-        <form class="search__playlist">
+        <form class="search__playlist col-xl-8">
             <input class="search__secion-browser" type="text" placeholder="Reggaeton">
             <a href="edit-playlist.html"><input class="search__secion-button" type="button" value="Nueva Playlist"></a>
         </form>
-        <h1>Playists</h1>
-        <div class="container">
+        <div>
+            <h1>Playists</h1>
+        <div class="container col-xl-8">
             <div class="row">
-                <a href="edit-playlist.html"><div class="search__music-img"><img src="img/img1.png" alt="Reggaeton"></a>
+                <a href="edit-playlist.html"><div class="search__music-img search__music-img-hover"><img src="img/img1.png" alt="Reggaeton"></a>
                     <h3>Full Regaeton</h3>
                     <p>15 Canciones</p>
                 </div>
@@ -59,8 +60,8 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <div class="container">
+        <br><br><br>
+        <div class="container col-xl-8">
             <div class="row">
                 <div class="search__music-img"><img src="img/img1.png" alt="Reggaeton">
                 </div>
@@ -79,6 +80,7 @@
             </div>
         </div>
     </div>
+        </div>
     <div class="main__footer">
         <footer>
             <div class="main__footer">
