hice el login en mobile

--- a/login.html
+++ b/login.html
@@ -26,12 +26,11 @@
             <form class="form__login" action="">
                 <input class="form__login-username" type="text" placeholder="Correo electrónico o nombre de usuario">
                 <br>
-                <br>
                 <input class="form__login-pasword" type="password" placeholder="Contraseña">
             </form>
             <br>
-            <form action="">
-                <input class="form__login-button-remember-me" type="radio" type="radio" value="Recuérdame">Recuerdame
+            <form class="form_login-buttons-remember-login">
+                <input class="form__login-button-remember-me" type="radio" type="radio" value="Recuérdame">
                 <a href="home.html"><input class="form__login-button-login" type="button" value="Iniciar sesión"></a>
             </form>
             <br><br>
