--- a/register.html
+++ b/register.html
@@ -18,45 +18,47 @@
             <a href="home.html"><h1 class="header__title col-xl-auto">Sprintify</h1></a>
         </div>
     </header>
-    <div>
-        <br>
-        <h1 class="form__register-top">Registrate con tu dirección de email</h1>
-        <form action="">
-            <input class="form__register-email" type="text" placeholder="Correo electrónico" required>
-            <br><br>
-            <input class="form__register-confirm-email" type="text" placeholder="Confirmar correo electrónico" required>
-            <br><br>
-            <input class="form__register-pasword" type="password" placeholder="Contraseña" required>
-            <br><br>
-            <input class="form__register-username" type="text" placeholder="Nombre de Usuario" required>
-            <br><br>
-        </form>
-        <h2 class="form__register-bootom">FECHA DE NACIMIENTO</h2>
-        <form action="">
-            <input class="form__register-day" type="text" placeholder="Día" required>
-            <input class="form__register-month" type="text" placeholder="Mes" required>
-            <input class="form__register-age" type="text" placeholder="Año" required>
+    <div class="register__box">
+        <div>
             <br>
-            <input type="radio" type="radio">Masculino
-            <input type="radio" type="radio">Femenino
-            <input type="radio" type="radio">Otro
-        </form>
-        <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
-        <br>
-        <div class="form__register-line"></div>
-        <br>
-        <h1 class="form__register-line-bottom">¿Ya tienes cuenta?</h1>
-        <br>
-        <a href="login.html"><input class="form__register-login" type="button" value="Inicia sesión"></a>
-    </div>
-    <div class="main__footer">
-        <footer>
-            <div class="main__footer">
-                <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
-                <h1 class="footer__powered-by">Powered by</h1>
-                <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-            </div>
-        </footer>
+            <h1 class="form__register-top">Registrate con tu dirección de email</h1>
+            <form class="form___register-primer-secion">
+                <input class="form__register-email" type="text" placeholder="Correo electrónico" required>
+                <br>
+                <input class="form__register-confirm-email" type="text" placeholder="Confirmar correo electrónico" required>
+                <br>
+                <input class="form__register-pasword" type="password" placeholder="Contraseña" required>
+                <br>
+                <input class="form__register-username" type="text" placeholder="Nombre de Usuario" required>
+                <br>
+            </form>
+            <h2 class="form__register-bootom">FECHA DE NACIMIENTO</h2>
+            <form class="form___register-second-secion">
+                <input class="form__register-day" type="text" placeholder="Día" required>
+                <input class="form__register-month" type="text" placeholder="Mes" required>
+                <input class="form__register-age" type="text" placeholder="Año" required>
+                <br>
+                <input type="radio" type="radio">Masculino
+                <input type="radio" type="radio">Femenino
+                <input type="radio" type="radio">Otro
+            </form>
+            <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
+            <br>
+            <div class="form__register-line"></div>
+            <br>
+            <h1 class="form__register-line-bottom">¿Ya tienes cuenta?</h1>
+            <br>
+            <a href="login.html"><input class="form__register-login" type="button" value="Inicia sesión"></a>
+        </div>
+        <div class="main__footer">
+            <footer>
+                <div class="main__footer">
+                    <h1 class="footer__designed-in">Diseñado en Uruguay</h1>
+                    <h1 class="footer__powered-by">Powered by</h1>
+                    <p id="footer__border">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
