retoque el register mobile

--- a/register.html
+++ b/register.html
@@ -38,9 +38,11 @@
                 <input class="form__register-month" type="text" placeholder="Mes" required>
                 <input class="form__register-age" type="text" placeholder="Año" required>
                 <br>
-                <input type="radio" type="radio">Masculino
-                <input type="radio" type="radio">Femenino
-                <input type="radio" type="radio">Otro
+                <div>
+                    <h1 class="form__register-sex"><input type="radio" type="radio">Masculino</h1>
+                    <h1 class="form__register-sex"><input type="radio" type="radio">Femenino</h1>
+                    <h1 class="form__register-sex"><input type="radio" type="radio">Otro</h1>
+                </div>
             </form>
             <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
             <br>
