home terminado para mobile

--- a/home.html
+++ b/home.html
@@ -20,8 +20,10 @@
             <header>
                 <div class="main__header">
                     <h1 class="header__title" class="col-xl-auto">Sprintify</h1>
-                    <a href="register.html" class="header__register header__login-register" class="col-xl-auto">Registrate</a>
-                    <a href="login.html" class="header__login header__login-register" class="col-xl-auto">Iniciar Sesión</a>
+                    <div class="div-header__login-register">
+                        <a href="register.html" class="header__register header__login-register" class="col-xl-auto">Registrate</a>
+                        <a href="login.html" class="header__login header__login-register" class="col-xl-auto">Iniciar Sesión</a>
+                    </div>
                 </div>
             </header>
         </div>
