ultimo commit del proyecto (arreglé un par de cosas)

--- a/register.html
+++ b/register.html
@@ -38,19 +38,23 @@
                 <input class="form__register-month" type="text" placeholder="Mes" required>
                 <input class="form__register-age" type="text" placeholder="Año" required>
                 <br>
-                <div>
+                <div class="form__gender">
                     <h1 class="form__register-sex"><input type="radio" type="radio">Masculino</h1>
                     <h1 class="form__register-sex"><input type="radio" type="radio">Femenino</h1>
                     <h1 class="form__register-sex"><input type="radio" type="radio">Otro</h1>
                 </div>
             </form>
-            <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
-            <br>
-            <div class="form__register-line"></div>
-            <br>
-            <h1 class="form__register-line-bottom">¿Ya tienes cuenta?</h1>
-            <br>
-            <a href="login.html"><input class="form__register-login" type="button" value="Inicia sesión"></a>
+            <form action="">
+                <div class="form__div-buttons">
+                    <a href="home.html"><input class="form__register-button" type="button" value="REGISTRATE"></a>
+                    <br>
+                    <div class="form__register-line"></div>
+                    <br>
+                    <h1 class="form__register-line-bottom">¿Ya tienes cuenta?</h1>
+                    <br>
+                    <a href="login.html"><input class="form__register-login" type="button" value="Inicia sesión"></a>
+                </div>
+            </form>
         </div>
         <div class="main__footer">
             <footer>
